different improvements and progress